--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -139,9 +139,10 @@
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showReviews">
                             <h4 class="text-center">Reviews</h4>
                             <hr/>
-                            <p>Panel will list all the reviews created inside a project. List is categorized into 4 types:
+                            <p>Panel will list all the reviews created inside a project. List is categorized into 4
+                                types:
                                 <br>
-                                MY REVIEWS:  are the reviews you have requested others<br>
+                                MY REVIEWS: are the reviews you have requested others<br>
                                 DUE: are the reviews requested to you by other researcher<br>
                                 ALL: MY REVIEWS + DUE<br>
                                 ARCHIVED: are the closed reviews<br>
@@ -199,7 +200,7 @@
                             <b>Step1 : Choose Template/Process</b>
 
                             <p>In order to create provenance first you have to choose a Process.
-                                Based on the process you choose, provenance steps may vary.
+                                Based on the process you choose, setup attributes may vary.
                             </p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
@@ -207,6 +208,7 @@
                                      src="assets/img/userguide/choose-template.png">
                             </div>
                             <p>After you hit OK then process form will be opened.</p>
+
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
                                      src="assets/img/userguide/create-process.png">
@@ -224,6 +226,7 @@
                             <p>Files panel will show you all your uploaded files for a project. It will preserve the
                                 directory layout. You can view the file by clicking on the name of the file.
                             </p>
+
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
                                      src="assets/img/userguide/files-view.png">
@@ -231,14 +234,17 @@
                             <b>How to create a sub folder</b>
 
                             <p>Project name will be your root folder. Any folder's you wanted to create will be under
-                                this root folder. Click on the <a>CREATE FOLDER</a> link, enter name of the folder and click add.</p>
+                                this root folder. Click on the <a>CREATE FOLDER</a> link, enter name of the folder and
+                                click add.</p>
 
                             <b>How to upload a file</b>
 
                             <p>If you want to upload a file into a directory then click on the upload icon <i
-                                    class="fa fa-upload"></i> Then a pop up window will appear through which you can browse and select a file.
+                                    class="fa fa-upload"></i> Then a pop up window will appear through which you can
+                                browse and select a file.
                                 After you select it will appear under "Files to Upload List" as shown in the image
                                 below. </p>
+
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
                                      src="assets/img/userguide/upload-file.png">
