--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -28,6 +28,11 @@
                                 </div>
                             </div>
                             <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw"></i>Measurement:</div>
+                                <div class="col-xs-8">is the assignment of a number/value to a property/attribute.
+                                </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-xs-3"><i class="fa fa-fw fa-briefcase"></i>Project:</div>
                                 <div class="col-xs-8"> is defined as a workspace where you can store all the
                                     information related to a project or perform some actions against them. Every project
@@ -45,6 +50,11 @@
                                 <div class="col-xs-3"><i class="fa fa-fw fa-code-fork"></i>Process:</div>
                                 <div class="col-xs-8">is one of the key step in provenance creation. Process is defined
                                     as an experiment / computation / data analysis with a set of inputs and outputs.
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw"></i>Property:</div>
+                                <div class="col-xs-8">is defined as an attribute or characteristic of sample
                                 </div>
                             </div>
                             <div class="row">
@@ -93,7 +103,15 @@
                             <div class="watermark">Draft</div>
                             <b>Switch Projects</b>
 
-                            <p>Navigation bar allows you to switch between different projects</p>
+                            <p>Projects bar indicates total number of projects user has created/shared. Dropdown menu
+                                will give you the list of project names. When you click on project name it will take you
+                                to the respective Homepage.</p>
+
+                            <b>Create New Project</b>
+
+                            <p>To Create a new project click on the drop-down menu and select button called "New
+                                Project"
+                                and enter the new project name</p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive" src="assets/img/userguide/choose-project.png">
@@ -208,11 +226,50 @@
                                      src="assets/img/userguide/choose-template.png">
                             </div>
                             <p>After you hit OK then process form will be opened.</p>
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/filled-process.png">
+                            </div>
+                            <b>Setup:</b>
+
+                            <p>Setup information has various properties to be filled in which are unique to each
+                                process.</p>
+                            <b>Samples:</b>
+
+                            <p>Click the "Add" button and choose samples which you are using for this process. You can
+                                also choose more than one sample. </p>
+                            <b>Measurements</b>
+
+                            <p>When the process type is non-transformative you will be able to add measures to your
+                                sample
+                                Next to each sample there is a <a>"Measurement"</a> link using which you can add
+                                various measurements taken during the process
+                            </p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
-                                     src="assets/img/userguide/create-process.png">
+                                     src="assets/img/userguide/measurements.png">
                             </div>
+                            <b>Transformation</b>
+
+                            <p> When the process type is transformative you will be able to perform various actions on
+                                the sample measures and properties.
+                                There are 3 different actions you can perform on sample samples: They are: <br>
+                                Not Transformed : Measurements will be carried over to the downstream processes   <br>
+                                End Attribute (Default) : Will end the property.  <br>
+                                Is Transformed : Measurements will not be carried over to the downstream processes. But the property will be carried over  <br>
+                            </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/transformation.png">
+                            </div>
+                            <b>Files used</b>
+
+                            <p>Click the "Add" button to choose all the files which are inputs to this process</p>
+                            <b>Files produced</b>
+
+                            <p>Click the "Add" button to choose all the files which are produced by this process</p>
                         </div>
                     </li>
                     <li class="list-group-item list-group-item">
@@ -237,6 +294,10 @@
                                 this root folder. Click on the <a>CREATE FOLDER</a> link, enter name of the folder and
                                 click add.</p>
 
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/file-sub-folder.png">
+                            </div>
                             <b>How to upload a file</b>
 
                             <p>If you want to upload a file into a directory then click on the upload icon <i
@@ -247,7 +308,44 @@
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
-                                     src="assets/img/userguide/upload-file.png">
+                                     src="assets/img/userguide/file-upload.png">
+                            </div>
+                            <p> After you choose the files to upload, they will appear as a list onto the left sidebar.
+                                By clicking "Upload All" button you will be able to upload all the selected files from
+                                your
+                                local system onto materialscommons.</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/file-upload-list.png">
+                            </div>
+                            <b>Add Note & Tags</b>
+
+                            <p> Each datafile can be tagged. By tagging the datafiles you will be able to categorize and
+                                search. There is also an option to add customized notes to the datafile. Additional
+                                features such as note formatting, attach images to the note are also available
+                            </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/file-note-tag.png">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <i class=" fa fa-fw fa-comment-o"></i> <a ng-click="showSettings = !showSettings">Settings</a>
+
+                        <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showSettings">
+                            <h4 class="text-center">Settings</h4>
+                            <hr/>
+                            <p>Project settings help project owner to give permission/access to view their project.
+                                Owner can add/remove the users depending on with whom he/she wanted to share their
+                                project. Currently When a project is shared everything inside the project is shared.
+                            </p>
+
+                            <div class="watermark">Draft</div>
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive" src="assets/img/userguide/settings.png">
                             </div>
                         </div>
                     </li>
