--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -194,6 +194,13 @@
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive" src="assets/img/userguide/samples-view.png">
                             </div>
+                            <b>How to create sample:</b>
+                            <p>Sample creation is driven through process.
+                                "As Received" is a process which allows to create new samples in the system.
+                            </p>
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive" src="assets/img/userguide/create-sample.png">
+                            </div>
                         </div>
                     </li>
 
@@ -333,7 +340,7 @@
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <i class=" fa fa-fw fa-comment-o"></i> <a ng-click="showSettings = !showSettings">Settings</a>
+                        <i class=" fa fa-fw fa-gear"></i> <a ng-click="showSettings = !showSettings">Settings</a>
 
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showSettings">
                             <h4 class="text-center">Settings</h4>
