--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,22 +1,22 @@
 <div>
     <br>
+
     <div>
         <div class="row" style="padding-left: 15px">
             <div ui-view></div>
         </div>
         <div class="row">
             <div class="col-xs-6">
-                <div home-processes project="project"></div>
-                <div home-reviews project="project"></div>
-                <div home-notes project="project"></div>
+                <div home-processes project="home.project"></div>
+                <div home-reviews project="home.project"></div>
+                <div home-notes project="home.project"></div>
             </div>
             <div class="col-xs-6">
-                <div home-samples project="project"></div>
-                <div home-files project="project"></div>
-                <div home-calendar project="project"></div>
+                <div home-samples project="home.project"></div>
+                <div home-files project="home.project"></div>
+                <div home-calendar project="home.project"></div>
             </div>
         </div>
-
     </div>
 </div>
 
