--- a/website/app/application/processes/process-settings.html
+++ b/website/app/application/processes/process-settings.html
@@ -1,112 +1,103 @@
 <div>
-    <div class="modal-header">
-        <h3 class="modal-title">SetUp</h3>
-    </div>
-    <br>
+    <form name="mainSettingForm" novalidate>
+        <div class="modal-header">
+            <h3 class="modal-title">SetUp</h3>
+        </div>
+        <br>
 
-    <div class="modal-body">
+        <div class="modal-body">
+            <div class="row" ng-form="settingForm" ng-repeat="setting in settings">
+                <div ng-switch="setting.property._type">
+                    <!--------- number --------->
+                    <div ng-switch-when="number">
+                        <label class="col-xs-3 control-label">
+                            {{::setting.property.name}}
+                            <i ng-if="setting.property.required"
+                               class="fa fa-fw fa-asterisk text-danger"></i>
+                        </label>
 
-        <div class="row" ng-repeat="setting in settings">
-            <div ng-switch="setting.property._type">
+                        <div class="col-xs-6">
+                            <div class="col-xs-8">
+                                <input type="number"
+                                       name="numberInput"
+                                       step="any"
+                                       class="form-control"
+                                       ng-required="setting.property.required"
+                                       ng-model="setting.property.value">
 
-                <!--------- number --------->
-                <div ng-switch-when="number">
-                    <label class="col-xs-3 control-label" for="numberInput">
-                        {{::setting.property.name}}
-                        <i ng-if="setting.property.required"
-                           class="fa fa-fw fa-asterisk text-danger"></i>
-                    </label>
+                                <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                     ng-messages="settingForm.numberInput.$error" class="errors">
+                                    <div ng-message="number">Please enter number.</div>
+                                    <div ng-message="required">Its a required field.</div>
+                                </div>
+                            </div>
+                            <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                            <select ng-model="setting.property.unit" data-placeholder="Choose"
+                                    class="form-control"
+                                    ng-required="setting.property.required">
+                                <option value="{{choice}}"
+                                        ng-repeat="choice in setting.property.units">
+                                    {{ choice }}
+                                </option>
+                            </select>
+                        </span>
+                            <span class="help-block">{{::setting.property.description}}</span>
+                        </div>
+                    </div>
 
-                    <div class="col-xs-6">
-                        <div class="col-xs-8">
-                            <input type="number"
-                                   id="numberInput"
-                                   step="any"
-                                   class="form-control"
-                                   ng-required="setting.property.required"
+                    <!--------- selection --------->
+                    <div ng-switch-when="selection"><label class="col-xs-3 control-label"> {{::setting.property.name}}
+                        <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+
+                        <div class="col-xs-6">
+                            <div class="col-xs-8"><select ng-model="setting.property.value" data-placeholder="Choose"
+                                                          name="selectInput" class="form-control"
+                                                          ng-required="setting.property.required">
+                                <option value="{{choice.value}}" ng-repeat="choice in setting.property.choices">
+                                    {{ choice.name }}
+                                </option>
+                            </select>
+
+                                <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                     ng-messages="settingForm.selectInput.$error" class="errors">
+                                    <div ng-message="required">It's a required field.</div>
+                                </div>
+                            </div>
+                            <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                            <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                                <select ng-model="setting.property.unit" data-placeholder="Choose" class="form-control"
+                                        ng-required="setting.property.required">
+                                    <option value="{{choice}}" ng-repeat="choice in setting.property.units"> {{ choice }}
+                                    </option>
+                                </select>
+                            </span> <span class="help-block">{{::setting.property.description}}</span></div>
+                    </div>
+                    <!--------- string --------->
+                    <div ng-switch-when="string"><label class="col-xs-3 control-label"> {{::setting.property.name}}
+                        <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+
+                        <div class="col-xs-6">
+                            <input type="text" name="stringInput" class="form-control"
+                                   name="stringInput" ng-required="setting.property.required"
                                    ng-model="setting.property.value">
-                        </div>
-                        <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
-                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
-                            <select ng-model="setting.property.unit" data-placeholder="Choose"
-                                    class="form-control"
-                                    ng-required="setting.property.required">
-                                <option value="{{choice}}"
-                                        ng-repeat="choice in setting.property.units">
-                                    {{ choice }}
-                                </option>
-                            </select>
-                        </span>
-                        <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::setting.property.name}}</span>
-                        <span class="help-block">{{::setting.property.description}}</span>
+
+                            <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                 ng-messages="settingForm.stringInput.$error" class="errors">
+                                <div ng-message="required">It's a required field.</div>
+                                <div ng-message="text">It's a text field.</div>
+                            </div>
+                             <span class="help-block">{{::setting.property.description}}</span></div>
                     </div>
+                    <!--------- unknown type --------->
+                    <div ng-switch-default><span>Unknown template type {{setting.property._type}}</span></div>
                 </div>
-
-                <!--------- selection --------->
-                <div ng-switch-when="selection">
-                    <label class="col-xs-3 control-label" for="selectInput">
-                        {{::setting.property.name}}
-                        <i ng-if="setting.property.required"
-                           class="fa fa-fw fa-asterisk text-danger"></i>
-                    </label>
-
-                    <div class="col-xs-6">
-                        <div class="col-xs-8">
-                            <select ng-model="setting.property.value" data-placeholder="Choose"
-                                    id="selectInput"
-                                    class="form-control "
-                                    ng-required="setting.property.required">
-                                <option value="{{choice.value}}" ng-repeat="choice in setting.property.choices">{{
-                                    choice.name }}
-                                </option>
-                            </select>
-                        </div>
-                        <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
-                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
-                            <select ng-model="setting.property.unit" data-placeholder="Choose"
-                                    class="form-control"
-                                    ng-required="setting.property.required">
-                                <option value="{{choice}}"
-                                        ng-repeat="choice in setting.property.units">
-                                    {{ choice }}
-                                </option>
-                            </select>
-                        </span>
-                        <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::setting.property.name}}</span>
-                        <span class="help-block">{{::setting.property.description}}</span>
-                    </div>
-                </div>
-
-                <!--------- string --------->
-                <div ng-switch-when="string">
-                    <label class="col-xs-3 control-label" for="stringInput">
-                        {{::setting.property.name}}
-                        <i ng-if="setting.property.required"
-                           class="fa fa-fw fa-asterisk text-danger"></i>
-                    </label>
-
-                    <div class="col-xs-6">
-                        <input type="text"
-                               id="stringInput"
-                               class="form-control"
-                               name="stringInput"
-                               ng-required="setting.property.required"
-                               ng-model="setting.property.value">
-                        <span ng-show="form.stringInput.$error.required" class="text-danger">You must supply a {{::setting.property.name}}.</span>
-                        <span class="help-block">{{::setting.property.description}}</span>
-                    </div>
-                </div>
-
-                <!--------- unknown type --------->
-                <div ng-switch-default>
-                    <span>Unknown template type {{setting.property._type}}</span>
-                </div>
-
             </div>
         </div>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
+
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok(mainSettingForm.$valid)">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </form>
 </div>
