--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -33,12 +33,15 @@
                         <!--<div class="col-xs-10">-->
                             <!--<display-property property="property"></display-property>-->
                         <!--</div>-->
-                        <!--<div class="col-xs-1">-->
-                            <!--<i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>-->
-                        <!--</div>-->
-                        <!--<div class="col-xs-1">-->
-                            <!--<i ng-click="removeChoice($index)" style="color:#e57373" class="fa fa-minus fa-fw"></i>-->
-                        <!--</div>-->
+                    <div ng-if="chosenProperty.name === 'composition'">
+                        <div class="col-xs-1">
+                            <i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>
+                        </div>
+                        <div class="col-xs-1">
+                            <i ng-click="removeChoice($index)" style="color:#e57373" class="fa fa-minus fa-fw"></i>
+                        </div>
+                    </div>
+
                     <!--</div>-->
                     <p style="padding: 10px;" class="bg-warning" ng-if="message">
                         {{message}}</p>
