Switch to new version of angular grid. Update for faster file loading. Start debugging.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -31,8 +31,8 @@
     <link href="assets/css/nsPopover.css" rel="stylesheet">
     <link href="assets/css/handsontable.full.css" rel="stylesheet">
     <link href="assets/css/ng-tags-input.css" rel="stylesheet">
-    <link href="bower_components/ag-grid/dist/angularGrid.css" rel="stylesheet">
-    <link href="bower_components/ag-grid/dist/theme-fresh.css" rel="stylesheet">
+    <link href="bower_components/ag-grid/dist/angular-grid.min.css" rel="stylesheet">
+    <link href="bower_components/ag-grid/dist/theme-fresh.min.css" rel="stylesheet">
     <link href="bower_components/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
 
     <!-- Application style sheet -->
@@ -146,7 +146,7 @@
 <script src="assets/js/angular/angular-recursion.min.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation-rule.js"></script>
-<script src="bower_components/ag-grid/dist/angularGrid.js"></script>
+<script src="bower_components/ag-grid/dist/angular-grid.min.js"></script>
 <script src="bower_components/angular-google-chart/ng-google-chart.js"></script>
 <script src="assets/js/ng-tags-input.js"></script>
 <!-- endbuild -->
@@ -228,6 +228,7 @@
 <script src="application/services/review-service.js"></script>
 <script src="application/services/process-list-service.js"></script>
 <script src="application/services/ui.js"></script>
+<script src="application/services/gridFiles.js"></script>
 <script src="application/services/search-query-service.js"></script>
 <script src="application/services/list-params.js"></script>
 <script src="application/services/current.js"></script>
